# TCE_25Engine

./: -files -m  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  autoexec_dp.cfg  darkplaces-icon4.tga  darkplaces-icon5.tga  darkplaces-icon9.tga  keypairauth.txt  keypairauth.txt.pub
docs/: DYNAMIC_LIGHTING.md  PHYSICS.md  SUN_SHADOWS.md  physics_system.md  radiant_integration.md  structure.md
gfx/: conback.tga  conback2.tga  conchars.tga  crosshair10.tga  crosshair12.tga  crosshair13.tga  crosshair17.tga  crosshair19.tga  crosshair2.tga  crosshair20.tga  crosshair25.tga  crosshair27.tga  crosshair28.tga  crosshair32.tga  crosshair35.tga  crosshair37.tga  crosshair39.tga  crosshair4.tga  crosshair40.tga  crosshair42.tga  crosshair46.tga  crosshair47.tga  crosshair49.tga  crosshair51.tga  crosshair54.tga  crosshair55.tga  crosshair57.tga  crosshair59.tga  crosshair6.tga  crosshair60.tga  crosshair63.tga  crosshair64.tga  crosshair7.tga  crosshair9.tga  crosshair_ring.tga  crosshair_ring_nexgun.tga  crosshair_ring_rifle.tga  crosshairhagar.tga  crosshairminstanex.tga  crosshairporto.tga  (+10 more)
models/: ax_planes.md3  bultrail.tga  casing_bronze.iqm  casing_bronze_norm.tga  elecbeam.tga  eleccore3.tga  eleccore5.tga  eleccore7.tga  elecglass.tga  flash.md3  marker.md3  nexflash.md3  portal.md3  ptrail.tga  shotorg_adjuster.md3  tagrocket.md3  tagrocket.tga  uziflash.md3  vhshield.md3
particles/: hook_pink.tga  hook_red.tga  hook_white.tga  laserbeam.tga  lgbeam.tga
tc/: autoexec.cfg  default.cfg  gameinfo.txt
textures/: arc.tga  arc_gloss.tga  gak.tga  (+145 more)
(+7522 files in other folders)
